Tenant Manager API
